force-app/main/default/objects/Quote/fields/CreateQuoteCheck__c.field-meta.xml
<CustomField>
    <fullName>CreateQuoteCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Quote Check</label>
    <type>Checkbox</type>
</CustomField>