force-app/main/default/objects/Quote/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName> 
    <formula>CreatedDate</formula>
    <label>Creation Date</label>
    <type>DateTime</type>
</CustomField>