force-app/main/default/objects/Quote/fields/QuoteAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteAutoNumber__c</fullName>
    <label>Quote Auto Number</label>
    <type>AutoNumber</type>
</CustomField>