force-app/main/default/objects/Quote/fields/QuoteFormulaName__c.field-meta.xml
<CustomField>
    <fullName>QuoteFormulaName__c</fullName>
    <formula>&quot;Q-&quot; &amp;(RIGHT(TEXT(YEAR( DATEVALUE( CreatedDate )) ), 2)  &amp; &apos;-&apos; &amp; QuoteAutoNumber__c)</formula>
    <label>Quote Formula Name</label>
    <type>Text</type>
</CustomField>