force-app/main/default/objects/Quote/validationRules/Account_Deactivated.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Deactivated</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity.Account.Inactive__c = True &amp;&amp; ( $Profile.Name = &apos;DH Customer Administration&apos; || $Profile.Name = &apos;DH Marketing Profile&apos; || $Profile.Name = &apos;DH Sales Profile&apos;)  &amp;&amp; ISNEW() = True</errorConditionFormula>
    <errorMessage>As the account is deactivated, no new quotes can be created.</errorMessage>
</ValidationRule>